Adds multi-role support and dashboards for staff users and others